fix: text align justify

--- a/client/src/app/category/[slug]/category.module.css
+++ b/client/src/app/category/[slug]/category.module.css
@@ -398,7 +398,7 @@
   color: #374151;
   font-size: 15px;
   line-height: 1.9;
-  max-width: 860px;
+  max-width: 100%;
   text-align: justify;
 }
 
